Switch to using tabs for the changesets/file contents search params as only one can be active at a time.
Adjust the markup for the search results panels to make it more compact.

--- a/Client/views/index.ejs
+++ b/Client/views/index.ejs
@@ -1,171 +1,169 @@
 <!DOCTYPE html>
 <html ng-app="codeSearch">
 
-<head>
-  <title>Mercurial Code Search</title>
+  <head>
+    <title>Mercurial Code Search</title>
 
-  <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
-  <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
+    <link rel='stylesheet' href='/stylesheets/style.css' />
 
-  <script src="/javascripts/jquery.min.js"></script>
-  <script src="/javascripts/bootstrap.min.js"></script>
-  <script src="/javascripts/angular.min.js"></script>
-  <script src="/javascripts/angular-sanitize.min.js"></script>
-  <script src="/javascripts/app.js"></script>
+    <script src="/javascripts/jquery.min.js"></script>
+    <script src="/javascripts/bootstrap.min.js"></script>
+    <script src="/javascripts/angular.min.js"></script>
+    <script src="/javascripts/angular-sanitize.min.js"></script>
+    <script src="/javascripts/app.js"></script>
 
-</head>
+  </head>
 
-<body ng-controller="CodeSearchController" class="bg-default">
+  <body ng-controller="CodeSearchController" class="bg-default">
 
-  <header class="bg-primary">
-    <h2>Mercurial Search</h2>
-  </header>
+    <header class="bg-primary">
+      <h2>Mercurial Search</h2>
+    </header>
 
-  <div class="container">
+    <div class="container">
 
-    <div class="row">
+      <div class="row">
 
-      <div class="col-md-4">
+        <div class="col-md-4">
 
-        <div class="panel panel-primary">
+          <div class="panel panel-primary">
+            <ul class="nav nav-tabs">
+              <li class="active">
+                <a href="#changesets" data-toggle="tab">Search Changesets</a>
+              </li>
+              <li>
+                <a href="#contents" data-toggle="tab">Search File Contents</a>
+              </li>
+            </ul>
 
-          <div class="panel-heading">
-            <h3 class="panel-title">Search Parameters</h3>
-          </div>
+            <div class="tab-content">
 
-          <div class="panel-body">
+              <!-- Changesets search params tab contents -->
+              <div class="tab-pane active" id="changesets">
 
-            <!-- Changeset search params -->
-            <div class="panel panel-default">
+                <div class="panel panel-default">
 
-              <div class="panel-heading">
-                <h3 class="panel-title">
-                  <span style="color:black">Changeset Search Paramters</span>
-                </h3>
+                  <div class="panel-body">
+
+                    <div class="input-group">
+                      <span class="input-group-addon">Repository:</span>
+                      <input type="text" class="form-control" placeholder="...">
+                    </div>
+                    <div class="input-group">
+                      <span class="input-group-addon">Branch:</span>
+                      <input type="text" class="form-control" placeholder="...">
+                    </div>
+                    <div class="input-group">
+                      <span class="input-group-addon bg-info">Message:</span>
+                      <input type="text" class="form-control" placeholder="...">
+                    </div>
+                    <div class="input-group">
+                      <span class="input-group-addon">Author:</span>
+                      <input type="text" class="form-control" placeholder="...">
+                    </div>
+
+                  </div>
+
+                </div>
+
               </div>
 
-              <div class="panel-body">
+              <!-- Contents search params tab contents -->
+              <div class="tab-pane" id="contents">
 
-                <div class="input-group">
-                  <span class="input-group-addon">Repository:</span>
-                  <input type="text" class="form-control" placeholder="...">
-                </div>
-                <div class="input-group">
-                  <span class="input-group-addon">Branch:</span>
-                  <input type="text" class="form-control" placeholder="...">
-                </div>
-                <div class="input-group">
-                  <span class="input-group-addon bg-info">Message:</span>
-                  <input type="text" class="form-control" placeholder="...">
-                </div>
-                <div class="input-group">
-                  <span class="input-group-addon">Author:</span>
-                  <input type="text" class="form-control" placeholder="...">
+                <div class="panel panel-default">
+
+                  <div class="panel-body">
+
+                    <div class="input-group">
+                      <span class="input-group-addon">Repository:</span>
+                      <input type="text" class="form-control" placeholder="...">
+                    </div>
+                    <div class="input-group">
+                      <span class="input-group-addon">Branch:</span>
+                      <input type="text" class="form-control" placeholder="...">
+                    </div>
+                    <div class="input-group">
+                      <span class="input-group-addon bg-info">Types:</span>
+                      <input type="text" class="form-control" placeholder="...">
+                    </div>
+                    <div class="input-group">
+                      <span class="input-group-addon bg-info">Enums:</span>
+                      <input type="text" class="form-control" placeholder="...">
+                    </div>
+                    <div class="input-group">
+                      <span class="input-group-addon bg-info">Functions:</span>
+                      <input type="text" class="form-control" placeholder="...">
+                    </div>
+                    <div class="input-group">
+                      <span class="input-group-addon bg-info">Attributes:</span>
+                      <input type="text" class="form-control" placeholder="...">
+                    </div>
+                    <div class="input-group">
+                      <span class="input-group-addon bg-info">Comments:</span>
+                      <input type="text" class="form-control" placeholder="...">
+                    </div>
+
+                  </div>
+
                 </div>
 
               </div>
 
             </div>
-
-            <hr>
-
-            <!-- Source code search params -->
-            <div class="panel panel-default">
-
-              <div class="panel-heading">
-                <h3 class="panel-title">
-                  <span style="color:black">Source Code Search Paramters</span>
-                </h3>
-              </div>
-
-              <div class="panel-body">
-
-                <div class="input-group">
-                  <span class="input-group-addon">Repository:</span>
-                  <input type="text" class="form-control" placeholder="...">
-                </div>
-                <div class="input-group">
-                  <span class="input-group-addon">Branch:</span>
-                  <input type="text" class="form-control" placeholder="...">
-                </div>
-                <div class="input-group">
-                  <span class="input-group-addon bg-info">Types:</span>
-                  <input type="text" class="form-control" placeholder="...">
-                </div>
-                <div class="input-group">
-                  <span class="input-group-addon bg-info">Enums:</span>
-                  <input type="text" class="form-control" placeholder="...">
-                </div>
-                <div class="input-group">
-                  <span class="input-group-addon bg-info">Functions:</span>
-                  <input type="text" class="form-control" placeholder="...">
-                </div>
-                <div class="input-group">
-                  <span class="input-group-addon bg-info">Attributes:</span>
-                  <input type="text" class="form-control" placeholder="...">
-                </div>
-                <div class="input-group">
-                  <span class="input-group-addon bg-info">Comments:</span>
-                  <input type="text" class="form-control" placeholder="...">
-                </div>
-
-              </div>
-
-            </div>
-
-            <hr>
 
             <div style="text-align:center;">
               <button type="button" class="btn btn-default" ng-click="searchButtonClicked()">Search</button>
             </div>
 
+            &nbsp;
+
           </div>
 
         </div>
 
-      </div>
+        <!-- Search results -->
+        <div class="col-md-8">
 
-      <!-- Search results -->
-      <div class="col-md-8">
+          <div class="panel panel-primary">
 
-        <div class="panel panel-primary">
-
-          <div class="panel-heading">
-            <h3 class="panel-title">Search Results
-              <span class="badge">{{searchResults.total}}</span>
-            </h3>
-          </div>
-
-          <div class="panel-body">
-
-            <div class="alert alert-danger" ng-show="searchError">
-              Remote server is unavailable. Please check and try again.
+            <div class="panel-heading">
+              <h3 class="panel-title">Search Results
+                <span class="badge">{{searchResults.total}}</span>
+              </h3>
             </div>
 
-            <!--
-            <div class="panel panel-default" ng-repeat="hit in searchResults.hits">
-              <div class="panel-body">
-                <p ng-bind-html="hit.highlight.message[0]"></p>
+            <div class="panel-body">
+
+              <div class="alert alert-danger" ng-show="searchError">
+                Remote server is unavailable. Please check and try again.
               </div>
+
+              <div class="panel panel-default" ng-repeat="hit in searchResults.hits">
+
+                <div class="row">
+                  <div class="col-sm-1 search-result-label"><strong>Repository:</strong></div>
+                  <div class="col-sm-10">{{hit._source.repository}}</div>
+                </div>
+                <div class="row" ng-hide="hit._source.branch.length === 0">
+                  <div class="col-sm-1 search-result-label"><strong>Branch:</strong></div>
+                  <div class="col-sm-10">{{hit._source.branch}}</div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-1 search-result-label"><strong>Author:</strong></div>
+                  <div class="col-sm-10">{{hit._source.author}}</div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-1 search-result-label"><strong>Date:</strong></div>
+                  <div class="col-sm-4">{{hit._source.changeDateTime | date:'yyyy-MM-dd HH:mm:ss'}}</div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-1 search-result-label"><strong>Message:</strong></div>
+                  <div class="col-sm-10"><p ng-bind-html="hit.highlight.message[0]"></p></div>
+                </div>
+
             </div>
--->
-            <ul class="list-group" ng-repeat="hit in searchResults.hits">
-              <li class="list-group-item">
-                <strong>Repository: </strong> {{hit._source.repository}}
-              </li>
-              <li class="list-group-item">
-                <strong>Branch: </strong> {{hit._source.branch}}
-              </li>
-              <li class="list-group-item">
-                <strong>Author: </strong> {{hit._source.author}}
-              </li>
-              <li class="list-group-item">
-                <strong>Date: </strong> {{hit._source.changeDateTime | date:'yyyy-MM-dd HH:mm:ss'}}
-              </li>
-              <li class="list-group-item">
-                <strong>Message: </strong> <p ng-bind-html="hit.highlight.message[0]"></p>
-              </li>
-            </ul>
 
           </div>
 
@@ -175,8 +173,6 @@
 
     </div>
 
-  </div>
-
-</body>
+  </body>
 
 </html>
