Add a couple of inputs to allow the number of search results to be specified.

--- a/Client/views/index.ejs
+++ b/Client/views/index.ejs
@@ -63,6 +63,13 @@
                     <input type="text" class="form-control" placeholder="..." ng-model="changesetSearchParams.author">
                   </div>
 
+                  <hr>
+
+                  <div class="input-group">
+                    <span class="input-group-addon"># Search Results:</span>
+                    <input type="text" class="form-control" placeholder="25" ng-model="changesetSearchParams.numResults">
+                  </div>
+
                 </div>
 
               </div>
@@ -105,6 +112,12 @@
                     <input type="text" class="form-control" placeholder="...">
                   </div>
 
+                  <hr>
+
+                  <div class="input-group">
+                    <span class="input-group-addon"># Search Results:</span>
+                    <input type="text" class="form-control" placeholder="25">
+                  </div>
                 </div>
 
               </div>
@@ -177,6 +190,8 @@
                 </dd>
 
               </div>
+
+              <hr>
 
             </dl>
 
